--- a/netacadDark.user.styl
+++ b/netacadDark.user.styl
@@ -3,7 +3,7 @@
 @namespace      github.com/LostViking09/NetacadDarkmode
 @version        1.0.0
 @description    A custom, responsive dark style for NetAcad Contenthub pages to avoid eyestrain.
-@author         Me
+@author         LostViking09
 @advanced  text     a_fontsize       "Content Font Size (in px)"  "17"
 ==/UserStyle== */
 @-moz-document domain("contenthub.netacad.com") {
