--- a/netacadDark.user.styl
+++ b/netacadDark.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Netacad dark mode
 @namespace      github.com/LostViking09/NetacadDarkmode
-@version        1.0.0
+@version        1.1.0
 @description    A custom, responsive dark style for NetAcad Contenthub pages to avoid eyestrain.
 @author         LostViking09
 @advanced  text     a_fontsize       "Content Font Size (in px)"  "17"
@@ -15,11 +15,49 @@
     .chunk-container.chunk > .container h2 {
         color: #0aa890;
     }
+    
+    /* -- Radio buttons & tests -- */
+    .cyu-quiz-container .question-container .question.question-incorrect {
+        background: linear-gradient(90deg, #eb33002b 0, #ad0101ab);
+        border:none;
+        color: white;
+    }
+    
+    .cyu-quiz-container .question-container .question.question-correct {
+        background: linear-gradient(90deg, #7deb002b 0, #04ad01ab);
+        border:none;
+        color: white;
+    }
+    
+    .cui .radio input.checked ~ .radio__label, .cui .radio input:checked ~ .radio__label {
+        color: #0aa896;
+        /*color: #0aa890;*/
+        text-decoration: underline dotted;
+    }
+    
+    .cui button, .cui input, .cui select, .cui textarea {
+        color: white;
+    }
+    
+    /*-------------------------------*/
 
     .chunk-container.chunk {
         border-bottom: 3px solid #c6c7ca;
     }
 
+    .animate .animate-component .animate-component-canvas{
+        border: none;
+        background-color: grey;
+        filter: brightness(50%);
+        transition: 200ms;
+    }
+    
+    .animate .animate-component .animate-component-canvas:hover{
+        filter: brightness(100%);
+        transition: 200ms;
+        background-color: #acacac!important;
+    }    
+    
     .cui .card,
     .cui a.card {
         border: none;
