--- a/netacadDark.user.styl
+++ b/netacadDark.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Netacad dark mode
 @namespace      github.com/LostViking09/NetacadDarkmode
-@version        1.1.0
+@version        1.1.1
 @description    A custom, responsive dark style for NetAcad Contenthub pages to avoid eyestrain.
 @author         LostViking09
 @advanced  text     a_fontsize       "Content Font Size (in px)"  "17"
@@ -45,18 +45,38 @@
         border-bottom: 3px solid #c6c7ca;
     }
 
-    .animate .animate-component .animate-component-canvas{
+    .animate{
         border: none;
         background-color: grey;
         filter: brightness(50%);
         transition: 200ms;
     }
     
-    .animate .animate-component .animate-component-canvas:hover{
+    .animate:hover{
         filter: brightness(100%);
         transition: 200ms;
         background-color: #acacac!important;
     }    
+    
+    .animate .player-controls .play-pause {
+        color: #fff;
+        border: none;
+    }
+    
+    .animate .animate-component .animate-component-canvas{
+        border: none;
+        background-color: grey;
+        transition: 200ms;
+    }
+    
+    .animate .animate-component .animate-component-canvas:hover{
+        transition: 200ms;
+        background-color: #acacac!important;
+    }
+    
+    .animate .player-controls {
+        background-color: #616161;
+    }
     
     .cui .card,
     .cui a.card {
