--- a/netacadDarkCoursePortal.user.styl
+++ b/netacadDarkCoursePortal.user.styl
@@ -1,8 +1,8 @@
 /* ==UserStyle==
-@name           Netacad Dark Course/Portal - Feb 2024
+@name           Darkmode Netacad Portal & Course - Feb 2024
 @namespace      github.com/openstyles/stylus
 @version        1.0.0
-@description    Darkmode for Netacad Portal & Courses
+@description    Dark mode for Netacad Portal & Courses
 @author         Luna Skye
 ==/UserStyle== */
 
@@ -44,7 +44,9 @@
     .cui .form-group .form-group__text input,
     .cui.template--cdc footer,
     .cui .card,
-    .custom-select { background: var(--col-bg-grey); }
+    .custom-select,
+    html body.cui header.global-header .navbar-nav .dropdown-menu,
+    html body.cui header.global-header .header-toolbar .login-div .dropdown-content { background: var(--col-bg-grey); }
     
     .resources-item .resources-list a:hover { background: var(--col-bg-mid); }
     
@@ -63,12 +65,28 @@
     .cui .link:hover,
     .featured-news-list a.featured-news-item .news-title { color: var(--col-text-link); }
     
-    .cui .activity, .generaltable { color: var(--col-text-secondary); }
+    .cui .activity, .generaltable,
+    html body.cui header.global-header .header-toolbar .login-div .login-dropdown { color: var(--col-text-secondary); }
     
-    body.cui, .cui .generaltable tbody tr:hover { color: var(--col-text-primary); }
+    body.cui,
+    .cui .generaltable tbody tr:hover,
+    header.header--regular .navbar-nav > li > a,
+    header.header--regular a { color: var(--col-text-primary) !important; }
+    
     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { color: var(--col-text-sat); }
     
-    .path-mod-assign td.submissionstatussubmitted, .path-mod-assign div.submissionstatussubmitted, .path-mod-assign a:link.submissionstatussubmitted { background: var(--col-bg-submitted); color: var(--col-text-submitted); }
-    .path-mod-assign td.submissionnotgraded, .path-mod-assign div.submissionnotgraded { background: var(--col-bg-notgraded); color: var(--col-text-notgraded); }
-    .path-mod-assign td.latesubmission, .path-mod-assign a:link.latesubmission, .path-mod-assign div.latesubmission {background: var(--col-bg-latesubmission); color: var(--col-text-latesubmission) }
+    .path-mod-assign td.submissionstatussubmitted,
+    .path-mod-assign div.submissionstatussubmitted,
+    .path-mod-assign a:link.submissionstatussubmitted {
+        background: var(--col-bg-submitted); color: var(--col-text-submitted);
+    }
+    .path-mod-assign td.submissionnotgraded,
+    .path-mod-assign div.submissionnotgraded {
+        background: var(--col-bg-notgraded); color: var(--col-text-notgraded);
+    }
+    .path-mod-assign td.latesubmission,
+    .path-mod-assign a:link.latesubmission,
+    .path-mod-assign div.latesubmission {
+        background: var(--col-bg-latesubmission); color: var(--col-text-latesubmission);
+    }
 }
